sistema de preventas

--- a/PuntoVentaWeb/Pages/Cotizador.razor
+++ b/PuntoVentaWeb/Pages/Cotizador.razor
@@ -38,7 +38,7 @@
 
         <div class="card-body @(datosGeneralesAbiertos ? "" : "d-none")">
             <div class="row align-items-center">
-                @* Buscador de Cliente (Igual que antes) *@
+                @* Buscador de Cliente *@
                 <div class="col-md-6 position-relative">
                     <label class="form-label">Buscar Cliente:</label>
                     <div class="input-group">
