--- a/PuntoVentaWeb/Pages/_Layout.cshtml
+++ b/PuntoVentaWeb/Pages/_Layout.cshtml
@@ -28,5 +28,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/BlazorBarcodeScanner.ZXing.JS/zxingjs.index.min.js"></script>
+    <script src="_content/BlazorBarcodeScanner.ZXing.JS/BlazorBarcodeScanner.js"></script>
 </body>
 </html>
